<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admin_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/admin_dashboard" />
        <item
            android:id="@+id/nav_manage_books"
            android:icon="@drawable/ic_book"
            android:title="@string/manage_books" />
        <item
            android:id="@+id/nav_manage_bookings"
            android:icon="@drawable/ic_booking"
            android:title="@string/manage_bookings" />
        <item
            android:id="@+id/nav_manage_offers"
            android:icon="@drawable/ic_offer"
            android:title="@string/manage_offers" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage_libraries"
            android:icon="@drawable/ic_library"
            android:title="@string/manage_libraries" />
        <item
            android:id="@+id/nav_manage_admins"
            android:icon="@drawable/ic_admin"
            android:title="@string/manage_admins" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_admin_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_admin_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>